[feat] GetMyDetail
